# yaml-config-merger

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  rules.yaml
.github/: dependabot.yml
.github/workflows/: docker-image.yaml
merger/: __main__.py  args.py  log.py  merger.py  metrics.py  prometheus.py
tests/: conftest.py
