[tool.poetry]
name = "yaml-config-merger"
authors = ["Gabi Davar <grizzly.nyo@gmail.com>"]
readme = "README.md"
package-mode = false
#packages = [
#    { include = "merger" }
#]

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "~31.0.0"
mergedeep = "~1.3.4"
PyYAML = "~6.0.2"
prometheus-client = "~0.21.1"
urllib3 = "~2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.14.1"
ruff = "^0.8.6"
pytest = "<8"
coverage = { version = "~7.6.10", extras = ["toml"] }
pytest-asyncio = "~0.23.8"
pytest-kubernetes = "~0.3.1"
types-requests = "^2.32.0.20241016"
types-pyyaml = "^6.0.12.20241230"
memray = "^1.15.0"

[build-system]
requires = ["poetry-core>=1.8.3,<2"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
python_version = "3.12"
files = "merger/*.py"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
cluster_timeout = 240
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"
testpaths = "tests"

[tool.coverage.run]
branch = true
