[tool.poetry]
name = "yaml-config-merger"
authors = ["Gabi Davar <grizzly.nyo@gmail.com>"]
readme = "README.md"
package-mode = false
#packages = [
#    { include = "merger" }
#]

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "~32.0.1"
mergedeep = "~1.3.4"
PyYAML = "~6.0.2"
prometheus-client = "~0.21.1"
urllib3 = "~2.4.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"
ruff = "^0.11.9"
pytest = "<8"
coverage = { version = "~7.8.0", extras = ["toml"] }
pytest-asyncio = "~0.23.8"
pytest-kubernetes = "~0.3.1"
types-requests = "^2.32.0.20250328"
types-pyyaml = "^6.0.12.20250402"
memray = "^1.17.2"

[build-system]
requires = ["poetry-core>=1.8.3,<2"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
python_version = "3.12"
files = "merger/*.py"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
cluster_timeout = 240
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"
testpaths = "tests"

[tool.coverage.run]
branch = true
