[tool.poetry]
name = "yaml-config-merger"
authors = ["Gabi Davar <grizzly.nyo@gmail.com>"]
readme = "README.md"
package-mode = false
#packages = [
#    { include = "merger" }
#]

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "~33.1.0"
mergedeep = "~1.3.4"
PyYAML = "~6.0.2"
prometheus-client = "~0.22.1"
urllib3 = "~2.5.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.17.1"
ruff = "^0.12.11"
pytest = "<8"
coverage = { version = "~7.10.6", extras = ["toml"] }
pytest-asyncio = "~0.23.8"
pytest-kubernetes = "~0.3.1"
types-requests = "^2.32.4.20250809"
types-pyyaml = "^6.0.12.20250822"
memray = "^1.18.0"

[build-system]
requires = ["poetry-core>=1.8.3,<2"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
python_version = "3.12"
files = "merger/*.py"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
cluster_timeout = 240
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"
testpaths = "tests"

[tool.coverage.run]
branch = true
